--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='h-full' lang="en">
+<html class='h-100' lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,11 @@
 
         <title>MesaSAR</title>
     </head>
-    <body class='h-full'>
+    <body class='h-100'>
         <noscript>
             <strong>We're sorry but this site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
-        <div id="app" class='h-full'></div>
+        <div id="app" class='h-100'></div>
         <script type="module" src="/src/main.js"></script>
     </body>
 </html>
