--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-        <title>MesaSAR</title>
+        <title>Mesa County Search &amp; Rescue</title>
     </head>
     <body class='h-100'>
         <noscript>
